--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -17,7 +17,18 @@
       </li>
         <li class="nav-item">
          <a class="nav-link" href="/polls/suggestions">Other Tab (ToDo)<span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link disabled" href=""><p>Logged in as: {{ user.username }}</p><span class="sr-only">(current)</span></a>
+                </li>
 
+            <a class="nav-link" href="{% url 'logout' %}">Logout<span class="sr-only">(current)</span></a>
+            {% else %}
+                    <a class="nav-link" href="{% url 'social:begin' 'google-oauth2' %}">Login<span class="sr-only">(current)</span></a>
+                </a>
+            {% endif %}
+        </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Login as a
