added Student Model

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -17,6 +17,11 @@
       </li>
         <li class="nav-item">
          <a class="nav-link" href="/polls/suggestions">Other Tab (ToDo)<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+         <a class="nav-link" href="/polls/student_profile">My Student Profile<span class="sr-only">(current)</span></a>
+        </li>
+
         <li class="nav-item">
             {% if user.is_authenticated %}
                 <li class="nav-item">
