--- a/polls/templates/polls/list.html
+++ b/polls/templates/polls/list.html
@@ -13,6 +13,9 @@
       <li class="nav-item">
          <a class="nav-link" href="/polls/">Find a Tutor<span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link" href="/polls/chat">Chat<span class="sr-only">(current)</span></a>
+       </li>
         <li class="nav-item">
          <a class="nav-link" href="/polls/suggestions">Other Tab (ToDo)<span class="sr-only">(current)</span></a>
  <li class="nav-item">
