--- a/polls/templates/polls/room.html
+++ b/polls/templates/polls/room.html
@@ -1,6 +1,4 @@
-<!doctype html>
-
-
+<!DOCTYPE html>
 {% load bootstrap4 %}
 
 <html lang="en">
@@ -17,8 +15,8 @@
          <a class="nav-link" href="/polls/">Find a Tutor<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="/polls/chat">Chat<span class="sr-only">(current)</span></a>
-       </li>
+            <a class="nav-link" href="/polls/chat">Chat<span class="sr-only">(current)</span></a>
+         </li>
         <li class="nav-item">
          <a class="nav-link" href="/polls/suggestions">Other Tab (ToDo)<span class="sr-only">(current)</span></a>
  <li class="nav-item">
@@ -47,22 +45,49 @@
           <a class="navbar-brand" href="#"><p class="text-info">Copyright/License: MIT</p></a>
           <a class="navbar-brand" href="#"><p class="text-info">Version: 1.0</p></a>
     </nav>
-      <div class="container">
-   <h1><p class="text-info">Here you can suggest a new poll.</p></h1>
+<head>
+    <meta charset="utf-8"/>
+    <title>Chat Room</title>
+</head>
+<body>
+    <textarea id="chat-log" cols="100" rows="20"></textarea><br/>
+    <input id="chat-message-input" type="text" size="100"/><br/>
+    <input id="chat-message-submit" type="button" value="Send"/>
+</body>
+<script>
+    var roomName = "{{ room_name|escapejs }}";
 
-   <form action="/polls/suggestions/list/" method="post">
-    {% csrf_token %}
-    <label for="polls/suggestions/list"><p class="text-info">It could be anyting, from your favorite dog breed to your least favorite
-    drink.</p></label>
+    var chatSocket = new WebSocket(
+        'ws://' + window.location.host +
+        '/ws/chat/' + roomName + '/');
 
-       <div class="input-group mb-3">
-       <input id="polls/suggestions/list" type="text" name="suggestion_text" class="form-control"
-              aria-describedby="button-addon2"value="{{ suggestion_text }}" y="basic-addon2">
-      <div class="input-group-append">
-         <button type= "submit" class="btn btn-outline-success">Submit</button>
-      </div>
-    </div>
+    chatSocket.onmessage = function(e) {
+        var data = JSON.parse(e.data);
+        var message = data['message'];
+        document.querySelector('#chat-log').value += (message + '\n');
+    };
 
+    chatSocket.onclose = function(e) {
+        console.error('Chat socket closed unexpectedly');
+    };
+
+    document.querySelector('#chat-message-input').focus();
+    document.querySelector('#chat-message-input').onkeyup = function(e) {
+        if (e.keyCode === 13) {  // enter, return
+            document.querySelector('#chat-message-submit').click();
+        }
+    };
+
+    document.querySelector('#chat-message-submit').onclick = function(e) {
+        var messageInputDom = document.querySelector('#chat-message-input');
+        var message = messageInputDom.value;
+        chatSocket.send(JSON.stringify({
+            'message': message
+        }));
+
+        messageInputDom.value = '';
+    };
+</script>
 
 
 
@@ -85,8 +110,5 @@
   </head>
 
 </form>
-
-  </body>
+</body>
 </html>
-
-
