--- a/polls/templates/polls/create_student.html
+++ b/polls/templates/polls/create_student.html
@@ -53,28 +53,39 @@
           <a class="navbar-brand" href="#"><p class="text-info">Version: 1.0</p></a>
       </nav>
       <div class="container">
-        <h2><p class="text-white ">Your Information (Student) </p></h2>
+        <h2><p class="text-white ">Enter your information below to register as a student.</p></h2>
           <div class="col-md-3 mb-4">
+
               {% csrf_token %}
           <div class="container">
-              {% if names.count < 2%}
-                <p class="text-white "> You are logged in, but it looks like you haven't registered as a student.
-                This is necessary, as it allows us to match you with a tutor. You can do so below.</p>
-               <a class="btn btn-info" href="/quick-tutor/register_as_student" role="button">Register as Student</a>
-              {% else %}
-                    {% for firstname in first_name %}
-                     <p class="text-white ">Student First Name: {{ Student.first_name }}</p>
-                     <p class="text-white ">Student Last Name: {{ Student.last_name }}</p>
-                     <p class="text-white ">Student Year: {{ Student.year_in_school }}</p>
-                     {% endfor %}
-              {% endif %}
+
+
 
         </div>
     </div>
     <!-- Grid column -->
 
+    <form>
+      <div class="form-group">
+        <label for="student_first_name"><p class="text-white ">First Name</p></label>
+        <input type="text" class="form-control" id="student_first_name" placeholder="Ex: Tom" value="{{ student_first_name }}">
+      </div>
+        <div class="form-group">
+        <label for="student_last_name"><p class="text-white ">Last Name</p></label>
+        <input type="text" class="form-control" id="student_last_name" placeholder="Ex: Hanks"value="{{ student_last_name }}">
+      </div>
+      <div class="form-group">
+        <label for="student_year"><p class="text-white ">Year</p> </label>
+        <select class="form-control" id="student_year" >
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+        </select>
 
 
+      </div>
+<a class="btn btn-info" href="/quick-tutor" role="button">Register as Student</a>
 
 
 
