--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,8 +1,9 @@
 
 <!doctype html>
 
-
+{% load static %}
 {% load bootstrap4 %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Quick Tutor</a>
@@ -13,13 +14,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-         <a class="nav-link" href="/polls/">Find a Tutor<span class="sr-only">(current)</span></a>
+         <a class="nav-link" href="/quick-tutor/">Find a Tutor<span class="sr-only">(current)</span></a>
       </li>
         <li class="nav-item">
-         <a class="nav-link" href="/polls/suggestions">Other Tab (ToDo)<span class="sr-only">(current)</span></a>
+         <a class="nav-link" href="/quick-tutor/suggestions">Other Tab (ToDo)<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-         <a class="nav-link" href="/polls/student_profile">My Student Profile<span class="sr-only">(current)</span></a>
+         <a class="nav-link" href="/quick-tutor/student_profile">My Student Profile<span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item">
@@ -64,7 +65,7 @@
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-<form action="{% url 'polls:vote' question.id %}" method="post">
+<form action="{% url 'quick-tutor:vote' question.id %}" method="post">
 {% csrf_token %}
 {% for choice in question.choice_set.all %}
     <div class="input-group">
