--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 {% load static %}
 {% load bootstrap4 %}
-
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 <html lang="en">
   <head>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -13,14 +13,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-         <a class="nav-link" href="/polls/">Find a Tutor<span class="sr-only">(current)</span></a>
+         <a class="nav-link" href="/quick-tutor/">Find a Tutor<span class="sr-only">(current)</span></a>
       </li>
         <li class="nav-item">
-         <a class="nav-link" href="/polls/suggestions">Other Tab (ToDo)<span class="sr-only">(current)</span></a>
+         <a class="nav-link" href="/quick-tutor/suggestions">Other Tab (ToDo)<span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item">
-         <a class="nav-link" href="/polls/student_profile">My Student Profile<span class="sr-only">(current)</span></a>
+         <a class="nav-link" href="/quick-tutor/student_profile">My Student Profile<span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item">
@@ -58,7 +58,7 @@
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
-        <a class="btn btn-info" role="button" href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a>
+        <a class="btn btn-info" role="button" href="{% url 'quick-tutor:detail' question.id %}">{{ question.question_text }}</a>
     {% endfor %}
     </ul>
 {% else %}
