Cleaned up Branch

--- a/polls/templates/polls/create_student.html
+++ b/polls/templates/polls/create_student.html
@@ -85,7 +85,7 @@
 
 
       </div>
-<a class="btn btn-info" href="/quick-tutor" role="button">Register as Student</a>
+<a class="btn btn-info" href="/quick-tutor/student_profile" role="button">Register as Student</a>
 
 
 
