--- a/polls/templates/polls/room.html
+++ b/polls/templates/polls/room.html
@@ -12,13 +12,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-         <a class="nav-link" href="/polls/">Find a Tutor<span class="sr-only">(current)</span></a>
+         <a class="nav-link" href="/quick-tutor/">Find a Tutor<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-            <a class="nav-link" href="/polls/chat">Chat<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/quick-tutor/chat">Chat<span class="sr-only">(current)</span></a>
          </li>
         <li class="nav-item">
-         <a class="nav-link" href="/polls/suggestions">Other Tab (ToDo)<span class="sr-only">(current)</span></a>
+         <a class="nav-link" href="/quick-tutor/suggestions">Other Tab (ToDo)<span class="sr-only">(current)</span></a>
  <li class="nav-item">
             {% if user.is_authenticated %}
                 <li class="nav-item">
