--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -1,3 +1,3 @@
 body {
-     background: linear-gradient(to right, #203A43 0%, #2C5364 100%)
+     background: linear-gradient(to right, #000000 0%, #434343 100%)
 }
