--- a/polls/templates/polls/create_student.html
+++ b/polls/templates/polls/create_student.html
@@ -67,16 +67,16 @@
 
     <form>
       <div class="form-group">
-        <label for="student_first_name"><p class="text-white ">First Name</p></label>
+        <label for="student_first_name"><p class="text-black ">First Name</p></label>
         <input type="text" class="form-control" id="student_first_name" placeholder="Ex: Tom" value="{{ student_first_name }}">
       </div>
         <div class="form-group">
-        <label for="student_last_name"><p class="text-white ">Last Name</p></label>
+        <label for="student_last_name"><p class="text-black ">Last Name</p></label>
         <input type="text" class="form-control" id="student_last_name" placeholder="Ex: Hanks"value="{{ student_last_name }}">
       </div>
       <div class="form-group">
-        <label for="student_year"><p class="text-white ">Year</p> </label>
-        <select class="form-control" id="student_year" >
+        <label for="student_year_in_school"><p class="text-black ">Year</p> </label>
+        <select class="form-control" id="student_year_in_school" >
           <option>1</option>
           <option>2</option>
           <option>3</option>
