--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -268,7 +268,7 @@
         <div class="col-lg-12">
           <div class="section-title text-left">
             <h2>
-              Tutors Availible Now
+              Tutors Available Now
             </h2>
             <p>
               UVA Undergraduates and Graduate Students ready to match with you and help. At $10 an hour, it's a steal.
@@ -281,7 +281,7 @@
             <h4>Jaime P.</h4>
             <div>
               <p>
-                Hi! I'm Jaime Peng! I love computer science, and math, and can help you with any CS class, any math class,
+                Hi! I'm Jaime Peng! I love computer science and math, and can help you with any CS class, any math class,
                 or any other intro engineering class!
               </p>
             </div>
@@ -305,7 +305,7 @@
             <h4>Norman B.</h4>
             <div>
               <p>
-                Hi all! My name is Norman Bates and I am a third year english and history major. I can help with any english questions,
+                Hi all! My name is Norman Bates, and I am a third year english and history major. I can help with any english questions,
                 history, or alike!
               </p>
             </div>
@@ -317,7 +317,7 @@
             <h4>Muhammad J.</h4>
             <div>
               <p>
-                Greeting UVA! I am Muhammad Jones, and I am a foruth year pre-med student. I can help with any of the pre-med classses,
+                Greetings UVA! I am Muhammad Jones, and I am a foruth year pre-med student. I can help with any of the pre-med classses,
                 like O-Chem and Physics!
               </p>
             </div>
@@ -329,7 +329,7 @@
             <h4>Xia F.</h4>
             <div>
               <p>
-               Hi UVA. My Name is Xia Feng and I am a fourth year CS Major. I am also a TA for algorithms and OS, and can help
+               Hi UVA. My Name is Xia Feng and I am a fourth year CS Major. I am also a TA for Algorithms and OS, and can help
                 with any CS class!
               </p>
             </div>
@@ -341,8 +341,8 @@
             <h4>Kendall W.</h4>
             <div>
               <p>
-                Hello everyone! I am Kendall White, a third year prelaw and public policy major. Let me know if I can help
-                with any of these realted classes!
+                Hello everyone! I am Kendall White, a third year pre-law and public policy major. Let me know if I can help
+                with any of these related classes!
               </p>
             </div>
           </div>
@@ -476,7 +476,7 @@
               <h4 class="text-white">CHEM 2410: Organic Chemistry</h4>
               <div>
                 <p>
-                Looks at Carbon structures and their properties.
+                Looks at carbon structures and their properties.
                 </p>
               </div>
               <a href="#" class="primary-btn">
@@ -499,7 +499,7 @@
               <h4 class="text-white">APMA 1110: Calculus II</h4>
               <div>
                 <p>
-                  Surveys Intgeral Calculus and it's applications.
+                  Surveys Integral Calculus and its applications.
                 </p>
               </div>
               <a href="#" class="primary-btn">
@@ -525,7 +525,7 @@
               Be a student, tutor, or both.
             </h2>
             <p>
-             You can be payed by the hour, get to know other UVA students, and brush up on all your skills!
+             You can be paid by the hour, get to know other UVA students, and brush up on all your skills!
             </p>
           </div>
         </div>
