--- a/polls/templates/polls/tutor_match.html
+++ b/polls/templates/polls/tutor_match.html
@@ -188,12 +188,11 @@
       <div class="row justify-content-center section-title">
         <div class="col-lg-12">
           <h2>
-            Popular Courses <br />
+            Tutors <br />
             Available Right Now
           </h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Get matched with a tutor who knows what you need.
           </p>
         </div>
       </div>
