edit student form and profile

--- a/polls/templates/polls/student_profile.html
+++ b/polls/templates/polls/student_profile.html
@@ -64,7 +64,7 @@
    <form action="/quick-tutor/student_profile/" method="post">
     {% csrf_token %}
         {{profile_form.as_p}}
-        {{choice_form.as_p}}
+        <!-- {{choice_form.as_p}} -->
 
        <button type="submit">Save Changes</button>
 
