--- a/polls/templates/polls/edit_student_profile.html
+++ b/polls/templates/polls/edit_student_profile.html
@@ -53,20 +53,17 @@
           <a class="navbar-brand" href="#"><p class="text-info">Version: 1.0</p></a>
       </nav>
       <div class="container">
-        <h2><p class="text-black "> Welcome {{ user.first_name }} (Student) </p></h2>
-          <h3><p class = "text-black"> Profile Information </p></h3>
+        <h2><p class="text-black "> Edit Your Information </p></h2>
           <div class="col-md-3 mb-4">
-              {% csrf_token %}
-          <div class="container">
-              <p class="text-black ">First Name: {{user.first_name}}</p>
-              <p class="text-black ">Last Name: {{user.last_name}}</p>
-              <p class="text-black ">Email: {{user.email}}</p>
-              <p class="text-black ">Availability: {{user.profile.availability}}</p>
-              <p class="text-black ">Skills: {{user.profile.availability}}</p>
-              <p class="text-black ">Are you a Tutor: {{user.profile.student_tutor}}</p>
-        </div>
-            <a class="nav-link" href = "#" >Edit Information</a>
-    </div>
+
+          <form method="post">
+               {% csrf_token %}
+              {{ profile_form.as_p }}
+
+           <button type="submit">Save Changes</button>
+          </form>
+
+          </div>
 
 
 
@@ -92,3 +89,5 @@
   </head>
 
 </html>
+
+
