--- a/polls/templates/polls/student_profile.html
+++ b/polls/templates/polls/student_profile.html
@@ -61,11 +61,12 @@
               <p class="text-black ">First Name: {{user.first_name}}</p>
               <p class="text-black ">Last Name: {{user.last_name}}</p>
               <p class="text-black ">Email: {{user.email}}</p>
+
               <p class="text-black ">Availability: {{user.profile.availability}}</p>
-              <p class="text-black ">Skills: {{user.profile.availability}}</p>
+              <p class="text-black ">Skills: {{user.profile.skills}}</p>
               <p class="text-black ">Are you a Tutor: {{user.profile.student_tutor}}</p>
         </div>
-            <a class="nav-link" href = "#" >Edit Information</a>
+        <a class="nav-link" href = "/quick-tutor/edit_student_profile" >Edit Information</a>
     </div>
 
 
