--- a/polls/templates/polls/edit_student_profile.html
+++ b/polls/templates/polls/edit_student_profile.html
@@ -60,7 +60,7 @@
                {% csrf_token %}
               {{ profile_form.as_p }}
 
-              <button type="submit"><a class="nav-link" href = "/quick-tutor/student_profile" >Save Changes</a></button>
+              <button type="submit">Save Changes</button>
           </form>
 
           </div>
