--- a/polls/templates/polls/edit_student_profile.html
+++ b/polls/templates/polls/edit_student_profile.html
@@ -61,6 +61,8 @@
               {{ profile_form.as_p }}
 
               <button type="submit">Save Changes</button>
+              <!-- <button type="submit"><a class="nav-link" href = "/quick-tutor/student_profile" >Save Changes</a></button> -->
+
           </form>
 
           </div>
