--- a/polls/templates/polls/student_profile.html
+++ b/polls/templates/polls/student_profile.html
@@ -53,7 +53,7 @@
           <a class="navbar-brand" href="#"><p class="text-info">Version: 1.0</p></a>
       </nav>
       <div class="container">
-        <h2><p class="text-black "> Welcome {{ user.first_name }} (Student) </p></h2>
+        <h2><p class="text-black "> Welcome {{ user.first_name }}!</p></h2>
           <h3><p class = "text-black"> Profile Information </p></h3>
           <div class="col-md-3 mb-4">
               {% csrf_token %}
