--- a/polls/templates/polls/student_profile.html
+++ b/polls/templates/polls/student_profile.html
@@ -64,6 +64,7 @@
               <p class="text-black ">Availability: {{user.profile.availability}}</p>
               <p class="text-black ">Are you a tutor: {{user.profile.student_tutor}}</p>
               <p class="text-black ">Skills (for tutors only): {{user.profile.skills}}</p>
+              <p class ="text-black ">Student requests (for tutors only): {{user.profile.requests}}</p>
 
         </div>
         <a class="nav-link" href = "/quick-tutor/edit_student_profile" >Edit Information</a>
