--- a/polls/templates/polls/edit_student_profile.html
+++ b/polls/templates/polls/edit_student_profile.html
@@ -54,7 +54,7 @@
 
           <form method="post">
                {% csrf_token %}
-              {{ profile_form.as_p }}
+               {{profile_form}}
 
               <button type="submit">Save Changes</button>
               <!-- <button type="submit"><a class="nav-link" href = "/quick-tutor/student_profile" >Save Changes</a></button> -->
