--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -158,7 +158,7 @@
                 <li class="nav-item">
                     <a class="nav-link disabled" href=""><p>Logged in as: {{ user.username }}</p><span class="sr-only">(current)</span></a>
                 </li>
-
+             <a class="nav-link" href='/quick-tutor/student_profile'>My Profile<span class="sr-only">(current)</span></a>
             <a class="nav-link" href="{% url 'logout' %}">Logout<span class="sr-only">(current)</span></a>
             {% else %}
                     <li><a href="{% url 'social:begin' 'google-oauth2' %}">Login/Register</a></li>
